use updated trait sets and explore new AC ranges

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -31,8 +31,7 @@
     "from TrainModelConfig import TrainModelConfig\n",
     "from utils.geodata import drop_XY_NAs\n",
     "from utils.visualize import plot_splits\n",
-    "import utils.datasets as datasets\n",
-    "from utils.datasets import DataCollection, Dataset, MLCollection, CollectionName\n",
+    "from utils.datasets import DataCollection, Dataset, MLCollection, CollectionName, GBIFBand\n",
     "from utils.dataset_tools import Unit, FileExt\n",
     "\n",
     "NOTEBOOK = True\n",
@@ -65,66 +64,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inat_orig = Dataset(\n",
-    "    res=0.5,\n",
-    "    unit=Unit.DEGREE,\n",
-    "    collection_name=config.iNat_name,\n",
-    "    transform=\"exp_ln\",\n",
-    ")\n",
+    "# inat_orig = Dataset(\n",
+    "#     res=0.5,\n",
+    "#     unit=Unit.DEGREE,\n",
+    "#     collection_name=config.iNat_name,\n",
+    "#     transform=\"exp_ln\",\n",
+    "# )\n",
     "\n",
-    "inat_dgvm = Dataset(\n",
-    "    res=0.5,\n",
-    "    unit=Unit.DEGREE,\n",
-    "    collection_name=CollectionName.INAT_DGVM,\n",
-    "    transform=\"exp_ln\",\n",
-    ")\n",
+    "# inat_dgvm = Dataset(\n",
+    "#     res=0.5,\n",
+    "#     unit=Unit.DEGREE,\n",
+    "#     collection_name=CollectionName.INAT_DGVM,\n",
+    "#     transform=\"exp_ln\",\n",
+    "# )\n",
     "\n",
-    "inat_gbif = Dataset(\n",
-    "    res=0.5,\n",
-    "    unit=Unit.DEGREE,\n",
-    "    collection_name=CollectionName.INAT_GBIF,\n",
-    "    # filter_outliers=config.training_config.filter_y_outliers,\n",
-    ")\n",
+    "# inat_gbif = Dataset(\n",
+    "#     res=0.5,\n",
+    "#     unit=Unit.DEGREE,\n",
+    "#     collection_name=CollectionName.INAT_GBIF,\n",
+    "#     # filter_outliers=config.training_config.filter_y_outliers,\n",
+    "# )\n",
     "\n",
     "gbif = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
     "    collection_name=CollectionName.GBIF,\n",
-    "    band=datasets.GBIFBand.MEAN,\n",
+    "    band=GBIFBand.MEAN,\n",
     "    file_ext=FileExt.GRID\n",
     ")\n",
     "\n",
-    "splot = Dataset(\n",
-    "    res=0.5,\n",
-    "    unit=Unit.DEGREE,\n",
-    "    collection_name=CollectionName.SPLOT,\n",
-    "    band=datasets.GBIFBand.MEAN,\n",
-    "    file_ext=FileExt.GRID\n",
-    ")\n",
+    "# splot = Dataset(\n",
+    "#     res=0.5,\n",
+    "#     unit=Unit.DEGREE,\n",
+    "#     collection_name=CollectionName.SPLOT,\n",
+    "#     band=datasets.GBIFBand.MEAN,\n",
+    "#     file_ext=FileExt.GRID\n",
+    "# )\n",
     "\n",
     "wc = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
-    "    collection_name=config.WC_name,\n",
+    "    collection_name=CollectionName.WORLDCLIM,\n",
     ")\n",
     "\n",
     "modis = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
-    "    collection_name=config.MODIS_name,\n",
+    "    collection_name=CollectionName.MODIS,\n",
     ")\n",
     "\n",
     "soil = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
-    "    collection_name=config.soil_name,\n",
+    "    collection_name=CollectionName.SOIL,\n",
     ")\n",
     "\n",
     "vodca = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
     "    collection_name=CollectionName.VODCA,\n",
-    "    file_ext=FileExt.NETCDF4,\n",
     ")\n"
    ]
   },
@@ -142,7 +140,7 @@
    "outputs": [],
    "source": [
     "X = DataCollection([wc, modis, soil, vodca])\n",
-    "Y = DataCollection([inat_gbif])\n",
+    "Y = DataCollection([gbif])\n",
     "\n",
     "# Convert to MLCollection for training\n",
     "XY = MLCollection(X, Y)\n",
@@ -168,8 +166,8 @@
     "1) ~~Create a data frame where you have all response variables and predictors.~~\n",
     "2) ~~Remove cells where you do not have a value for ANY predictor/response variable (you still may have NA for some columns then).~~\n",
     "3) ~~Train the models and do the evaluation~~\n",
-    "4) Repeat step 3, but remove rows where you have at least one NA\n",
-    "5) Compare accuracies of step 3 and 4 and see what´s best.\n",
+    "4) ~~Repeat step 3, but remove rows where you have at least one NA~~\n",
+    "5) ~~Compare accuracies of step 3 and 4 and see what´s best.~~\n",
     "</div>"
    ]
   },
@@ -188,14 +186,15 @@
    "outputs": [],
    "source": [
     "if config.SAVE_AUTOCORRELATION_RANGES:\n",
-    "    coords = XY.df[\"geometry\"]\n",
-    "    data = XY.df[XY.X.cols]\n",
+    "    X = DataCollection([wc, modis, soil, vodca])\n",
+    "    coords = X.df[\"geometry\"]\n",
+    "    data = X.df[X.cols]\n",
     "\n",
     "    _, _, ranges = plot_autocorrelation_ranges(\n",
-    "        coords, data, config.LAGS, config.BW, distance_metric=\"haversine\", workers=10\n",
+    "        coords, data, config.LAGS, config.BW, distance_metric=\"haversine\", workers=8\n",
     "    )\n",
     "\n",
-    "    np.save(\"ranges.npy\", np.asarray(ranges))"
+    "    np.save(\"ranges_new.npy\", np.asarray(ranges))"
    ]
   },
   {
