--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -22,20 +22,42 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "id": "52ee0a07-5d34-478c-8f9b-0be892664591",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/tmp/ipykernel_3856634/1126813015.py:7: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+                        "\n",
+                        "import os\n",
+                        "os.environ['USE_PYGEOS'] = '0'\n",
+                        "import geopandas\n",
+                        "\n",
+                        "In a future release, GeoPandas will switch to using Shapely by default. If you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
+                        "  import geopandas as gpd\n",
+                        "2023-11-09 07:14:10.105765: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+                        "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+                        "2023-11-09 07:14:10.763903: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+                    ]
+                }
+            ],
             "source": [
                 "import json\n",
                 "from pathlib import Path\n",
                 "\n",
                 "import rioxarray as riox\n",
+                "import xarray as xr\n",
                 "import numpy as np\n",
                 "import geopandas as gpd\n",
                 "import pandas as pd\n",
                 "from PreprocessingConfig import PreprocessingConfig\n",
                 "from utils.datasets import Dataset, Unit, resample_dataset, CollectionName, GBIFBand\n",
+                "from functools import partial\n",
+                "from geocube.api.core import make_geocube\n",
+                "from geocube.rasterize import rasterize_points_griddata\n",
                 "\n",
                 "from utils.visualize import plot_distributions\n",
                 "\n",
@@ -207,6 +229,27 @@
                 "splot_out_path = Path(\"data/splot_ln/0.5_deg/splot_ln_mean_0.5_deg.parq\")\n",
                 "splot_out_path.parent.mkdir(parents=True, exist_ok=True)\n",
                 "splot_ln.to_parquet(splot_out_path, compression=\"zstd\", compression_level=2)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### Create 0.01 degree sPlot and GBIF grids for later comparison with high-resolution trait predictions."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "#### sPlot 0.01 degree grid"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "See `splot_gbif.py`"
             ]
         },
         {
