sanity checking 2 and 0.2 deg maps

--- a/2-DataExploration.ipynb
+++ b/2-DataExploration.ipynb
@@ -24,7 +24,9 @@
     "from utils.visualize import plot_distributions\n",
     "\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "\n",
+    "RES = 2"
    ]
   },
   {
@@ -50,25 +52,25 @@
    "outputs": [],
    "source": [
     "gbif = Dataset(\n",
-    "    res=0.5,\n",
+    "    res=RES,\n",
     "    collection_name=CollectionName.GBIF,\n",
     "    band=GBIFBand.MEAN\n",
     ")\n",
     "\n",
     "splot = Dataset(\n",
-    "    res=0.5,\n",
+    "    res=RES,\n",
     "    collection_name=CollectionName.SPLOT,\n",
     "    band=GBIFBand.MEAN\n",
     ")\n",
     "\n",
     "gbif_ln = Dataset(\n",
-    "    res=0.5,\n",
+    "    res=RES,\n",
     "    collection_name=CollectionName.GBIF_LN,\n",
     "    band=GBIFBand.MEAN\n",
     ")\n",
     "\n",
     "splot_ln = Dataset(\n",
-    "    res=0.5,\n",
+    "    res=RES,\n",
     "    collection_name=CollectionName.SPLOT_LN,\n",
     "    band=GBIFBand.MEAN\n",
     ")"
@@ -151,6 +153,7 @@
    "outputs": [],
    "source": [
     "modis = Dataset(\n",
+    "    res=RES,\n",
     "    collection_name=CollectionName.MODIS,\n",
     ")"
    ]
@@ -201,6 +204,7 @@
    "outputs": [],
    "source": [
     "wc = Dataset(\n",
+    "    res=RES,\n",
     "    collection_name=CollectionName.WORLDCLIM\n",
     ")"
    ]
@@ -251,6 +255,7 @@
    "outputs": [],
    "source": [
     "soil = Dataset(\n",
+    "    res=RES,\n",
     "    collection_name=CollectionName.SOIL\n",
     ")"
    ]
@@ -287,6 +292,7 @@
    "outputs": [],
    "source": [
     "vodca = Dataset(\n",
+    "    res=RES,\n",
     "    collection_name=CollectionName.VODCA,\n",
     ")"
    ]
