sanity check for log-transformed RVs

--- a/2-DataExploration.ipynb
+++ b/2-DataExploration.ipynb
@@ -18,15 +18,13 @@
     "os.environ['USE_PYGEOS'] = '0'\n",
     "import json\n",
     "\n",
-    "from pathlib import Path\n",
-    "\n",
     "from utils.datasets import CollectionName, Dataset, GBIFBand\n",
     "from utils.visualize import plot_distributions\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "RES = 2"
+    "RES = 0.2"
    ]
   },
   {
@@ -66,13 +64,11 @@
     "gbif_ln = Dataset(\n",
     "    res=RES,\n",
     "    collection_name=CollectionName.GBIF_LN,\n",
-    "    band=GBIFBand.MEAN\n",
     ")\n",
     "\n",
     "splot_ln = Dataset(\n",
     "    res=RES,\n",
     "    collection_name=CollectionName.SPLOT_LN,\n",
-    "    band=GBIFBand.MEAN\n",
     ")"
    ]
   },
@@ -135,6 +131,15 @@
    "outputs": [],
    "source": [
     "plot_distributions(splot.df.drop(columns=[\"geometry\"]), pdf=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_distributions(splot_ln.df.drop(columns=[\"geometry\"]), pdf=True)"
    ]
   },
   {
