get gbif-splot correlations easily with model res, grid res, and pft

--- a/4-ExploreResults.ipynb
+++ b/4-ExploreResults.ipynb
@@ -17,24 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_4025111/263855262.py:5: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
-      "\n",
-      "import os\n",
-      "os.environ['USE_PYGEOS'] = '0'\n",
-      "import geopandas\n",
-      "\n",
-      "In a future release, GeoPandas will switch to using Shapely by default. If you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
-      "  import geopandas as gpd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ast\n",
     "import json\n",
@@ -52,7 +37,7 @@
     "\n",
     "\n",
     "from utils.geodata import compare_grids, compare_gdf_to_grid, pad_raster\n",
-    "from utils.geodata import read_001_predictions, splot_correlation\n",
+    "from utils.geodata import read_001_predictions, splot_correlation_old\n",
     "\n",
     "from utils.visualize import plot_all_trait_obs_pred, plot_pred_cov\n",
     "\n",
@@ -778,7 +763,7 @@
     "SLA  = riox.open_rasterio(product_dir / \"all-prods_sla_stack_all-maps_05D_2022-02-14.grd\", masked=True)\n",
     "\n",
     "# Extrapolations\n",
-    "pred_05_dir = Path(\"results/predictions/MOD09GA.061_ISRIC_soil_WC_BIO_VODCA_0.5_deg_nan-strat=any_thr=0.5\")\n",
+    "pred_05_dir = Path(\"results/predictions/05deg_models/MOD09GA.061_ISRIC_soil_WC_BIO_VODCA_0.5_deg_nan-strat=any_thr=0.5\", \"Shrub_Tree_Grass\")\n",
     "pred_05_fn = \"MOD09GA.061_ISRIC_soil_WC_BIO_VODCA_0.5_deg_nan-strat=any_thr=0.5_predict.parq\"\n",
     "\n",
     "# GBIF extrapolations (0.5 degree)\n",
@@ -945,32 +930,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing GBIF X14...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing sPlot X14...\n",
-      "Processing GBIF X50...\n",
-      "Processing sPlot X50...\n",
-      "Processing GBIF X11...\n",
-      "Processing sPlot X11...\n",
-      "|       |   Leaf N mass |   Leaf N area |   Leaf SLA |\n",
-      "|:------|--------------:|--------------:|-----------:|\n",
-      "| sPlot |         0.491 |         0.599 |      0.499 |\n",
-      "| GBIF  |         0.357 |         0.511 |      0.385 |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trait_ids = [\"X14\", \"X50\", \"X11\"]\n",
     "trait_names = [\"Leaf N mass\", \"Leaf N area\", \"Leaf SLA\"]\n",
@@ -985,7 +947,7 @@
     "        print(f\"Processing {model} {trait_id}...\")\n",
     "\n",
     "        gdf = read_001_predictions(trait_id, model)\n",
-    "        corr = splot_correlation(gdf, trait_id, splot_trait_name, \"05_range\")\n",
+    "        corr = splot_correlation_old(gdf, trait_id, splot_trait_name, \"05_range\")\n",
     "\n",
     "        corr_table.at[model, trait_name] = corr\n",
     "    \n",
