--- a/4-ExploreResults.ipynb
+++ b/4-ExploreResults.ipynb
@@ -36,7 +36,7 @@
     "from geocube.api.core import make_geocube\n",
     "\n",
     "\n",
-    "from utils.geodata import compare_grids, compare_gdf_to_grid, pad_raster\n",
+    "from utils.geodata import compare_grids, compare_gdf_to_grid, pad_ds\n",
     "from utils.geodata import read_001_predictions, splot_correlation_old\n",
     "\n",
     "from utils.visualize import plot_all_trait_obs_pred, plot_pred_cov\n",
@@ -559,10 +559,10 @@
    "source": [
     "for i, (gbif, splot) in enumerate(zip(gbif_predictions, splot_predictions)):\n",
     "    gbif_predictions[i] = make_geocube(vector_data=gbif, resolution=(-0.5, 0.5))\n",
-    "    gbif_predictions[i] = pad_raster(gbif_predictions[i])\n",
+    "    gbif_predictions[i] = pad_ds(gbif_predictions[i])\n",
     "\n",
     "    splot_predictions[i] = make_geocube(vector_data=splot, resolution=(-0.5, 0.5))\n",
-    "    splot_predictions[i] = pad_raster(splot_predictions[i])"
+    "    splot_predictions[i] = pad_ds(splot_predictions[i])"
    ]
   },
   {
